// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/TextMetadataField should correctly render a number field 1`] = `
<TextInput
  className="bdl-TextMetadataField"
  hideOptionalLabel={true}
  onChange={[Function]}
  type="number"
  value="value"
/>
`;

exports[`features/metadata-instance-editor/fields/TextMetadataField should correctly render a text field 1`] = `
<TextInput
  className="bdl-TextMetadataField"
  hideOptionalLabel={true}
  onChange={[Function]}
  type="text"
  value="value"
/>
`;

exports[`features/metadata-instance-editor/fields/TextMetadataField should correctly render a zero in a number field 1`] = `
<TextInput
  className="bdl-TextMetadataField"
  hideOptionalLabel={true}
  onChange={[Function]}
  type="number"
  value={0}
/>
`;
